# seal

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: check.yml
src/: app.rs  args.rs  main.rs
